src/test/ui/borrowck/borrowck-suggest-extraction-of-subcomputation.nll.stderr
error[E0502]: cannot borrow `buckets` as immutable because it is also borrowed as mutable
  --> $DIR/borrowck-suggest-extraction-of-subcomputation.rs:25:70
   |
LL |     buckets.slice_mut()[(key as usize).wrapping_add(22).wrapping_rem(buckets.sweep())] = 22;
   |     -----------------------------------------------------------------^^^^^^^----------
   |     |                                                                |
   |     |                                                                immutable borrow occurs here
   |     mutable borrow occurs here
   |     borrow later used here
   |
note: consider extracting this into a `let`-binding
  --> $DIR/borrowck-suggest-extraction-of-subcomputation.rs:25:70
   |
LL |     buckets.slice_mut()[(key as usize).wrapping_add(22).wrapping_rem(buckets.sweep())] = 22;
   |                                                                      ^^^^^^^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0502`.
